<resources>
    <string name="app_name">Photopod</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_tabs_who_knows">TabsWhoKnows</string>
    <string name="title_capsules">Capsules</string>
    <string name="title_friends">Friends</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_activity_tabs">[Prototype]</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="link_register_here">Register here</string>
    <string name="link_back_to_login">Back to login</string>
    <string name="photo">Photo</string>
</resources>
